==> ARMmbed/mbed-os/targets/TARGET_Cypress/TARGET_PSOC6_FUTURE/spi_api.c <==
#include "cmsis.h"
#include "mbed_assert.h"
#include "mbed_error.h"
#include "mbed_debug.h"
#include "PeripheralPins.h"
#include "pinmap.h"
#include "spi_api.h"
#include "psoc6_utils.h"
#include "cy_sysclk.h"
#include "cy_gpio.h"
#include "cy_scb_spi.h"
#include "cy_sysint.h"
#define SPI_DEFAULT_SPEED               100000
#define NUM_SPI_PORTS                   8
#define SPI_DEFAULT_IRQ_PRIORITY        3
#define SPI_OVERSAMPLE                  4       /* 4..16 */
#define SPI_DEFAULT_TIMEOUT             1000
#define PENDING_NONE                    0
#define PENDING_RX                      1
#define PENDING_TX                      2
#define PENDING_TX_RX                   3
#define OBJ_P(in)     (&(in->spi))
#define OBJ_P(in)     (in)

void spi_init(spi_t *obj_in, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
    spi_obj_t *obj = OBJ_P(obj_in);
    uint32_t spi = (uint32_t)NC;
    en_clk_dst_t clock;

    if (mosi != NC) {
        spi = pinmap_merge(spi, pinmap_peripheral(mosi, PinMap_SPI_MOSI));
        clock = CY_PIN_CLOCK(pinmap_function(mosi, PinMap_SPI_MOSI));
    }
    if (miso != NC) {
        spi = pinmap_merge(spi, pinmap_peripheral(miso, PinMap_SPI_MISO));
        clock = CY_PIN_CLOCK(pinmap_function(miso, PinMap_SPI_MISO));
    }
    if (sclk != NC) {
        spi = pinmap_merge(spi, pinmap_peripheral(sclk, PinMap_SPI_SCLK));
        clock = CY_PIN_CLOCK(pinmap_function(sclk, PinMap_SPI_SCLK));
    }
    if (ssel != NC) {
        spi = pinmap_merge(spi, pinmap_peripheral(ssel, PinMap_SPI_SSEL));
        clock = CY_PIN_CLOCK(pinmap_function(ssel, PinMap_SPI_SSEL));
    }

    if (spi != (uint32_t)NC) {
        obj->base = (CySCB_Type*)spi;
        obj->spi_id = ((SPIName)spi - SPI_0) / (SPI_1 - SPI_0);
        obj->pin_mosi = mosi;
        obj->pin_miso = miso;
        obj->pin_sclk = sclk;
        obj->pin_ssel = ssel;
        obj->data_bits = 8;
        obj->clock = clock;
        obj->div_num = CY_INVALID_DIVIDER;
        obj->ms_mode = CY_SCB_SPI_MASTER;
#if DEVICE_SPI_ASYNCH
        obj->pending = PENDING_NONE;
        obj->events = 0;
        obj->tx_buffer = NULL;
        obj->tx_buffer_size = 0;
        obj->rx_buffer = NULL;
        obj->rx_buffer_size = 0;
#endif // DEVICE_SPI_ASYNCH
        spi_init_clock(obj, SPI_DEFAULT_SPEED);
        spi_init_peripheral(obj);
        spi_init_pins(obj);
#if DEVICE_SLEEP && DEVICE_LOWPOWERTIMER
        obj->pm_callback_handler.callback = spi_pm_callback;
        obj->pm_callback_handler.type = CY_SYSPM_DEEPSLEEP;
        obj->pm_callback_handler.skipMode = 0;
        obj->pm_callback_handler.callbackParams = &obj->pm_callback_params;
        obj->pm_callback_params.base = obj->base;
        obj->pm_callback_params.context = obj;
        if (!Cy_SysPm_RegisterCallback(&obj->pm_callback_handler)) {
            error("PM callback registration failed!");
        }
#endif // DEVICE_SLEEP && DEVICE_LOWPOWERTIMER
    } else {
        error("SPI pinout mismatch. Requested Rx and Tx pins can't be used for the same SPI communication.");
    }
}

void spi_format(spi_t *obj_in, int bits, int mode, int slave)
{
    spi_obj_t *obj = OBJ_P(obj_in);
    cy_en_scb_spi_mode_t new_mode = slave? CY_SCB_SPI_SLAVE : CY_SCB_SPI_MASTER;
    if ((bits < 4) || (bits > 16)) return;
    spi_default_pins(obj);
    Cy_SCB_SPI_Disable(obj->base, &obj->context);
    obj->data_bits = bits;
    obj->clk_mode = (cy_en_scb_spi_sclk_mode_t)(mode & 0x3);
    if (obj->ms_mode != new_mode) {
        obj->ms_mode = new_mode;
    }
    spi_init_peripheral(obj);
    spi_set_pins(obj);
}

void spi_frequency(spi_t *obj_in, int hz)
{
    spi_obj_t *obj = OBJ_P(obj_in);
    spi_default_pins(obj);
    Cy_SCB_SPI_Disable(obj->base, &obj->context);
    spi_init_clock(obj, hz);
    Cy_SCB_SPI_Enable(obj->base);
    spi_set_pins(obj);
}

int  spi_master_write(spi_t *obj_in, int value)
{
    spi_obj_t *obj = OBJ_P(obj_in);

    if (obj->ms_mode == CY_SCB_SPI_MASTER) {
        while (spi_busy(obj_in)) {
            // wait for the device to become ready
        }
        Cy_SCB_SPI_Write(obj->base, value);
        while (!Cy_SCB_SPI_IsTxComplete(obj->base)) {
            // wait for the transmission to complete
        }
        // Wait until RX FIFO is filled from the serial register.
        while (Cy_SCB_SPI_GetNumInRxFifo(obj->base) == 0) {
            /* busy loop */
        }
        return Cy_SCB_SPI_Read(obj->base);
    } else {
        return (int)CY_SCB_SPI_RX_NO_DATA;
    }
}

int spi_master_block_write(spi_t *obj_in, const char *tx_buffer, int tx_length, char *rx_buffer, int rx_length,  char write_fill)
{
    spi_obj_t *obj = OBJ_P(obj_in);
    int trans_length = 0;
    int rx_count = 0;
    int tx_count = 0;
    uint16_t tx_data = (uint8_t)write_fill;
    uint16_t write_fill16 = (tx_data << 8) | tx_data;
    const uint16_t *tx_buffer16 = (const uint16_t*)tx_buffer;
    uint16_t *rx_buffer16 = (uint16_t*)rx_buffer;

    if (obj->ms_mode != CY_SCB_SPI_MASTER) {
        return 0;
    }

    // If single transfer (data bits) is larger than byte, then writing must be performed
    // in words.
    bool word_transfer = !Cy_SCB_IsTxDataWidthByte(obj->base);
    if (word_transfer) {
        tx_length /= 2;
        rx_length /= 2;
        tx_data = write_fill16;
    }
    // Make sure no leftovers from previous transactions.
    Cy_SCB_SPI_ClearRxFifo(obj->base);
    // Calculate transaction length.
    trans_length = (tx_length > rx_length)? tx_length : rx_length;
    // get first byte to transmit.
    if (tx_count < tx_length) {
        if (word_transfer) {
            tx_data = *tx_buffer16++;
        } else {
            tx_data = *tx_buffer++;
        }
    }
    // Send required number of bytes.
    while (tx_count < trans_length) {
        if (Cy_SCB_SPI_Write(obj->base, tx_data)) {
            ++tx_count;
            // Get next byte to transfer.
            if (tx_count < tx_length) {
                if (word_transfer) {
                    tx_data = *tx_buffer16++;
                } else {
                    tx_data = *tx_buffer++;
                }
            } else {
                tx_data = write_fill16;
            }
        }
        // If we have bytes to receive check the rx fifo.
        if (rx_count < rx_length) {
            if (Cy_SCB_SPI_GetNumInRxFifo(obj->base) > 0) {
                if (word_transfer) {
                    *rx_buffer16++ = (uint16_t)Cy_SCB_SPI_Read(obj->base);
                } else {
                    *rx_buffer++ = (char)Cy_SCB_SPI_Read(obj->base);
                }
                ++rx_count;
            }
        }
    }
    // Wait for tx fifo to empty while reading received bytes.
    while (!Cy_SCB_SPI_IsTxComplete(obj->base)) {
        if ((rx_count < rx_length) && (Cy_SCB_SPI_GetNumInRxFifo(obj->base) > 0)) {
            if (word_transfer) {
                *rx_buffer16++ = (uint16_t)Cy_SCB_SPI_Read(obj->base);
            } else {
                *rx_buffer++ = (char)Cy_SCB_SPI_Read(obj->base);
            }
            ++rx_count;
        }
    }
    // Delay at least 1.5 clock cycle, so that FIFO is filled with the last char
    // and SCLK returns to idle state.
    Cy_SysLib_DelayUs(obj->clk_delay);
    // Read any remaining bytes from the fifo.
    while (rx_count < rx_length) {
        if (word_transfer) {
            *rx_buffer16++ = (uint16_t)Cy_SCB_SPI_Read(obj->base);
        } else {
            *rx_buffer++ = (char)Cy_SCB_SPI_Read(obj->base);
        }
        ++rx_count;
    }
    // Clean up if we have read less bytes than available.
    Cy_SCB_SPI_ClearRxFifo(obj->base);
    return word_transfer ? trans_length * 2 : trans_length;
}
